--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+}
+h1 {
+  font-size: 40px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  background-color: #FAF8F1;
+  
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.body {
+  width: 450px;
+  padding: 15px;
+  border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  margin-top: 10px;
+  background-color: #FAEAB1;
+  cursor: pointer;
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid ;
+  border-radius: 20px;
+  height: 30px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  margin-bottom: 10px;
+  background-color: #E5BA73;
+}
+.subtitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid ;
+  border-radius: 20px;
+  height: 30px;
+  margin-bottom: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background-color: #E5BA73;
+}
+.information{
+  border: 1px solid;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background-color: #E5BA73;
+  
+}
+.card-container:hover .card:not(:hover) {
+  filter: blur(5px);
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  margin: 10px;
+  flex: 1 0 300px;
+  transition: all 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card:hover {
+  transform: scale(1.05);
+  z-index: 1;
+  filter: none;
 }
